# TestForest

./: .gitignore  CMakeLists.txt  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
scripts/: install-dev.ps1  run_test_pipeline.py
src/proj/: main.cpp
src/proj/headers/: AVL-Tree.hpp  B-Tree.hpp  Binary-Tree.hpp  Red-Black-Tree.hpp  utils.hpp
src/proj/src/: utils.cpp
src/tscripts/: __init__.py  generation.py  logger.py  metircs.py  visualize.py
